--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
     function Header({ totalItems, toggleCart }) {
       return (
         <header>
-          <div className="logo">Divine Shopping</div>
+          <div className="logo">Global Organic States</div>
           <div className="nav-icons">
             <i className="fas fa-search"></i>
             <i className="fas fa-user"></i>
