--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
     const { createRoot } = ReactDOM;
 
     // Configuration - Update this with your backend URL
-    const API_BASE_URL = 'https://backend-2-jg2lorender.onrender.com'; // Replace with your actual Render backend URL
+    const API_BASE_URL = 'https://backend-2-jg2l.onrender.com'; // Replace with your actual Render backend URL
 
     // Enhanced product data with the original styling
     const products = [
