--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
         id: 1,
         name: "Minimalist Wood Shrine",
         price: 999,
-        image: "https://uploads.onecompiler.io/434pwjffd/43qw9sj8x/ai-generated-8502022_1280.png",
+        image: "https://uploads.onecompiler.io/434pwjffd/43ry6f7hh/5ee46e_0cd095b4255340aabfdb57008f4179ab~mv2.avif",
         description: "Handcrafted wooden shrine with minimalist design for peaceful meditation.",
       },
       {
