--- a/index.html
+++ b/index.html
@@ -502,21 +502,21 @@
         id: 2,
         name: "Marble Ganesha Idol",
         price: 1899.00,
-        image: "https://uploads.onecompiler.io/434pwjffd/43qw9sj8x/ai-generated-8502022_1280.png",
+        image: "https://uploads.onecompiler.io/434pwjffd/43ry6f7hh/5ee46e_a7bb0353d5dc4b9e9d526623c35e998a~mv2.jpg",
         description: "Beautiful marble Ganesha idol carved by skilled artisans.",
       },
       {
         id: 3,
         name: "Hanuman in Bronze",
         price: 1149.00,
-        image: "https://uploads.onecompiler.io/434pwjffd/43qw9sj8x/ai-generated-8502022_1280.png",
+        image: "https://uploads.onecompiler.io/434pwjffd/43ry6f7hh/ChatGPT%20Image%20Jul%2027,%202025,%2005_23_08%20PM.png",
         description: "Stunning bronze Hanuman statue with intricate details.",
       },
       {
         id: 4,
         name: "Sacred Lotus Candle",
         price: 4999,
-        image: "https://uploads.onecompiler.io/434pwjffd/43qw9sj8x/ai-generated-8502022_1280.png",
+        image: "https://uploads.onecompiler.io/434pwjffd/43ry6f7hh/ChatGPT%20Image%20Jul%2027,%202025,%2005_20_16%20PM.png",
         description: "Hand-poured lotus-shaped candle with calming lavender scent.",
       },
       {
@@ -530,7 +530,21 @@
         id: 6,
         name: "Crystal Prayer Beads",
         price: 3999,
-        image: "https://uploads.onecompiler.io/434pwjffd/43qw9sj8x/ai-generated-8502022_1280.png",
+        image: "https://uploads.onecompiler.io/434pwjffd/43ry6f7hh/ChatGPT%20Image%20Jul%2027,%202025,%2005_17_23%20PM.png",
+        description: "Handcrafted prayer beads with healing crystals.",
+      },
+      {
+        id: 7,
+        name: "Crystal Prayer Beads",
+        price: 9999,
+        image: "https://uploads.onecompiler.io/434pwjffd/43ry6f7hh/ChatGPT%20Image%20Jul%2027,%202025,%2005_17_23%20PM.png",
+        description: "Handcrafted prayer beads with healing crystals.",
+      },
+      {
+        id: 8,
+        name: "Ganesh Mandir",
+        price: 3999,
+        image: "https://uploads.onecompiler.io/434pwjffd/43ry7g2fr/5ee46e_1bddd90b19484282b6f09dc98c723016~mv2.jpg",
         description: "Handcrafted prayer beads with healing crystals.",
       },
     ];
