--- a/index.html
+++ b/index.html
@@ -529,14 +529,14 @@
       {
         id: 6,
         name: "Crystal Prayer Beads",
-        price: 3999,
+        price: 39.99,
         image: "https://uploads.onecompiler.io/434pwjffd/43ry6f7hh/ChatGPT%20Image%20Jul%2027,%202025,%2005_17_23%20PM.png",
         description: "Handcrafted prayer beads with healing crystals.",
       },
       {
         id: 7,
-        name: "Crystal Prayer Beads",
-        price: 9999,
+        name: "Crystal Prayer Beads Small",
+        price: 29.99,
         image: "https://uploads.onecompiler.io/434pwjffd/43ry6f7hh/ChatGPT%20Image%20Jul%2027,%202025,%2005_17_23%20PM.png",
         description: "Handcrafted prayer beads with healing crystals.",
       },
