--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
         id: 1,
         name: "Minimalist Wood Shrine",
         price: 999,
-        image: "https://uploads.onecompiler.io/434pwjffd/43ry6f7hh/5ee46e_0cd095b4255340aabfdb57008f4179ab~mv2.avif",
+        image: "https://uploads.onecompiler.io/434pwjffd/43ry7g2fr/5ee46e_1bddd90b19484282b6f09dc98c723016~mv2.jpg",
         description: "Handcrafted wooden shrine with minimalist design for peaceful meditation.",
       },
       {
