--- a/index.html
+++ b/index.html
@@ -1072,7 +1072,7 @@
     const CONFIG = {
       AMAZON_MERCHANT_ID: 'A2D0FIAQLBKO92', // Your actual Merchant ID
       AMAZON_CLIENT_ID: 'amzn1.application-oa2-client.97be686d21e54635bb4359ed066173f2', // Your actual Client ID
-      API_ENDPOINT: 'https://backendgos.onrender.com/process-payment', 
+      API_ENDPOINT: 'https://backendgos.onrender.com', 
       FREE_SHIPPING_THRESHOLD: 0,
       SHIPPING_COST: 9.99,
       TAX_RATE: 0, // Delaware has no sales tax
