--- a/index.html
+++ b/index.html
@@ -1779,11 +1779,11 @@
   <script>
     // ==================== CONFIGURATION ==================== 
     const CONFIG = {
-      API_ENDPOINT: 'https://bofa-backend.onrender.com',
+      API_ENDPOINT: 'https://heartland-ch6j.onrender.com',
       FREE_SHIPPING_THRESHOLD: 50, 
       SHIPPING_COST: 9.99, 
       TAX_RATE: 0.08,
-      PAYMENT_METHOD: 'bank_of_america'
+      PAYMENT_METHOD: 'GOS'
     };
 
     // ==================== DATA DEFINITIONS ====================
@@ -3112,3 +3112,4 @@
   </script>
 </body>
 </html>
+
